--- a/style.css
+++ b/style.css
@@ -16,13 +16,16 @@ h1 {
 
 .social-icon {
     height: 50px;
-    
+}
+
+.social-icon:hover {
+    height: 60px;
 }
 
 body {
     background-color: darkgray;
     color: rgb(0, 15, 58);
-
+    font-family: 'Arial';
 }
 
 div {
@@ -32,4 +35,20 @@ div {
 a {
     color: darkred;
     text-decoration: none;
+}
+
+a:hover { /* When 'a' tags are hovered by your mouse they become slightly larger */
+    font-size: 1.1em;
+}
+
+.container {
+    /* Give the container a display of flex */
+    display: flex;
+
+    /* Set the direction to be row */
+    flex-direction: row;
+
+    /* Center the content in the middle */
+    justify-content: space-evenly;
+    align-items: center;
 }
