--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a:hover { /* When 'a' tags are hovered by your mouse they become slightly larger
     /* Set the direction to be row */
     flex-direction: row;
 
-    /* Center the content in the middle */
+    /* Center the content evenly */
     justify-content: space-evenly;
     align-items: center;
 }
